scripts/backendDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: upesibackend-deployment
  labels:
    app: upesibackend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: upesibackend
  template:
    metadata:
      labels:
        app: upesibackend
    spec:
      containers:
        - name: upesibackend
          image: upesimoneytransfercr.azurecr.io/upesimoneywebapi:latest
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: upesimoneysecret
