scripts/backendService.yaml
apiVersion: v1
kind: Service
metadata:
  name: upesibackend-service
spec:
  selector:
    app: upesibackend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
