scripts/frontendService.yaml
apiVersion: v1
kind: Service
metadata:
  name: upesifrontend-service
spec:
  selector:
    app: upesifrontend
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
  type: LoadBalancer
